# frankenfs

./: .gitignore  .rchignore  .skill-loop-progress.md  .spec_10_11.md  AGENTS.md  BRIDGE_PLAN_REALITY_CHECK_2026_05_20.md  CHANGELOG.md  COMPREHENSIVE_SPEC_FOR_FRANKENFS_V1.md  Cargo.toml  EXISTING_EXT4_BTRFS_STRUCTURE.md  EXISTING_LEGACY_FS_STRUCTURE.md  FEATURE_PARITY.md  GEMINI_REVIEW_SUMMARY.md  PARITY-COVERAGE.md  PLAN_TO_PORT_FRANKENFS_TO_RUST.md  PLAN_TO_PORT_LEGACY_FS_TO_RUST.md  PROFILE_ANALYSIS.md  PROFILING-SUMMARY.md  PROPOSED_ARCHITECTURE.md  README.md  UPGRADE_LOG.md  agent_runner.py  btrfs-ubs.jsonl  cargo_version.txt  check_result.txt  check_test.py  cleanup.sh  cli-ubs.jsonl  cli-ubs.txt  clippy_pedantic.txt  critical_warnings.txt  diff.txt  extent-ubs.jsonl  extract_critical.py  ffs-alloc-ubs.jsonl  ffs-core-errors.txt  ffs-repair-ubs.txt  final_check.out  fix2.py  fix_fsops.rs  (+63 more)
crates/ffs/: Cargo.toml
crates/ffs-alloc/: Cargo.toml
crates/ffs-alloc/benches/: alloc_range_undo.rs  batch_alloc.rs  bitmap_count_width.rs  bitmap_csum_incremental.rs  bitmap_csum_incremental_persist.rs  bitmap_ops.rs  bitmap_run_width.rs  bitmap_scan_width.rs  bitmap_set_range_width.rs  contiguous_scan_width.rs  free_range_undo.rs  group_order.rs  highest_set_bit_width.rs  inode_alloc_cursor.rs  reserved_overlap_check.rs  take_bits_scan_width.rs
crates/ffs-alloc/src/: lib.rs  succinct.rs
crates/ffs-block/: Cargo.toml
crates/ffs-block/benches/: arc_cache.rs  arc_publish_vs_deep_clone.rs  block_buf_construct.rs  file_device_read.rs  inode_block_patch.rs  read_contiguous.rs
crates/ffs-block/examples/: alloc_convoy.rs  cold_read.rs  global_op_contention.rs
crates/ffs-block/src/: io_engine.rs  lib.rs
crates/ffs-block/tests/: cache_workload_comparison.rs  perf_regression_e2e.rs  writeback_e2e.rs
crates/ffs-btree/: Cargo.toml
crates/ffs-btree/benches/: bwtree_vs_locked.rs  extent_insert_overlap.rs  extent_leaf_search.rs  walk_range_collect.rs
crates/ffs-btree/src/: bw_tree.rs  lib.rs
crates/ffs-btrfs/: Cargo.toml
crates/ffs-btrfs/benches/: alloc_gap_scan.rs  alloc_maxend_fuse.rs  chunk_dedup.rs  cow_descent_scan.rs  cow_write_mutation.rs  csum_lookup.rs  extent_fetch.rs  floor_node_scan.rs  leaf_range_filter.rs  leaf_search_lazy.rs  ondisk_floor.rs  ondisk_inode_attr.rs  parsed_node_cache.rs  readdir_dedup.rs  send_stream_path_cache.rs  writeback_dag_order.rs  xattr_names.rs
crates/ffs-btrfs/src/: crash_consistency.rs  lib.rs  writeback.rs
crates/ffs-btrfs/tests/: DISCREPANCIES.md  conformance_ondisk_golden.rs
crates/ffs-cli/: Cargo.toml
crates/ffs-cli/src/: cmd_evidence.rs  cmd_repair.rs  main.rs  mount_console.rs  repair_btrfs_parsers.rs
crates/ffs-cli/tests/: cli_e2e.rs
crates/ffs-core/: Cargo.toml
crates/ffs-core/benches/: bd_bhh0i_contention.rs  bhh0i_geo_field.rs  bhh0i_spread_seed.rs  btrfs_alloc_rwlock.rs  btrfs_decompress_extents.rs  btrfs_encoded_read_covering_extent.rs  btrfs_read_io_overlap.rs  btrfs_uncompressed_read_overlap.rs  cache_get_rwlock.rs  chunk_end_resolve.rs  e2compr_cluster_read_overlap.rs  ext4_alloc_lock_convoy.rs  ext4_extent_tree_walk_overlap.rs  ext4_file_data_cache_shard.rs  ext4_fragmented_read_overlap.rs  ext4_group_lock_layout.rs  ext4_indirect_read_overlap.rs  ext4_lookup_run_overlap.rs  ext4_metadata_parse_xattr_ibody.rs  ext4_readdir_run_overlap.rs  ext4_write_extent_cache.rs  ext4_write_resolve.rs  ext4_write_unwritten_cache.rs  extent_collect_window.rs  extent_leaf_cache.rs  extent_resolve.rs  fsync_latency_workload.rs  gdt_flush_untouched_reads.rs  group_desc_read.rs  hot_inode_lockfree.rs  htree_resolve_logical.rs  indirect_ptr_resolve.rs  ls_dir_inode_prefetch.rs  mvcc_commit_batching.rs  mvcc_read_visible_arc_share_realistic.rs  parsed_node_cache_shard.rs  readdir_dedup_clone.rs  readdir_snapshot_page.rs  sparse_zero_scan.rs  statfs_group_aggregate.rs  (+1 more)
crates/ffs-core/src/: degradation.rs  file_handle.rs  fs_mvcc_store.rs  lib.rs  sharded_alloc.rs  vfs.rs
crates/ffs-core/tests/: bd_bhh0i_lock_decomposition_model.rs  cross_crate_integration.rs  htree_leaf_split_gate.rs  metamorphic.rs
crates/ffs-dir/: Cargo.toml
crates/ffs-dir/benches/: dirent_dup_scan.rs  entry_header_read.rs  entry_header_write.rs
crates/ffs-dir/src/: lib.rs
crates/ffs-error/: Cargo.toml
crates/ffs-error/benches/: errno_map.rs
crates/ffs-error/src/: lib.rs
crates/ffs-ext4/: Cargo.toml
crates/ffs-extent/: Cargo.toml
crates/ffs-fuse/: Cargo.toml
crates/ffs-harness/: Cargo.toml  module_census.json
crates/ffs-inode/: Cargo.toml
crates/ffs-journal/: Cargo.toml
crates/ffs-mvcc/: Cargo.toml
crates/ffs-ondisk/: Cargo.toml
crates/ffs-repair/: Cargo.toml
crates/ffs-types/: Cargo.toml
crates/ffs-xattr/: Cargo.toml
fuzz/: .gitignore  Cargo.toml
fuzz/dictionaries/: btrfs.dict  ext4.dict
fuzz/fuzz_targets/: fuzz_alloc_bitmap.rs  fuzz_alloc_succinct.rs  fuzz_authoritative_lane_manifest.rs  fuzz_block_aligned_vec.rs  fuzz_block_mem_io_engine.rs  fuzz_btree_bw_tree.rs  fuzz_btrfs_chunk_mapping.rs  fuzz_btrfs_devitem.rs  fuzz_btrfs_devitem_roundtrip.rs  fuzz_btrfs_inode_ref_payload.rs  fuzz_btrfs_metadata.rs  fuzz_btrfs_parse_inode_refs.rs  fuzz_btrfs_raid_profile.rs  fuzz_btrfs_send_stream.rs  fuzz_btrfs_tree_items.rs  fuzz_btrfs_tree_log.rs  fuzz_btrfs_verify_superblock_checksum.rs  fuzz_cli_btrfs_parsers.rs  fuzz_detect_filesystem.rs  fuzz_dir_operations.rs  fuzz_ext4_casefold.rs  fuzz_ext4_checksums.rs  fuzz_ext4_chksum.rs  fuzz_ext4_dir_extent.rs  fuzz_ext4_extent_actual_len.rs  fuzz_ext4_extra_bit_pack.rs  fuzz_ext4_fast_commit.rs  fuzz_ext4_group_desc_roundtrip.rs  fuzz_ext4_htree_mmp.rs  fuzz_ext4_image_reader.rs  fuzz_ext4_metadata.rs  fuzz_ext4_stamp_verify_roundtrip.rs  fuzz_ext4_xattr.rs  fuzz_extent_cache_concurrent.rs  fuzz_extent_tree.rs  fuzz_file_handle.rs  fuzz_fuse_splice_mount.rs  fuzz_fuzz_dashboard.rs  fuzz_fuzz_smoke_manifest.rs  fuzz_inode_roundtrip.rs  (+23 more)
fuzz/scripts/: generate_seeds.sh  minimize_corpus.sh  nightly_fuzz.sh  promote_crash.sh  run_fuzz.sh  smoke_gate.sh
tools/ffs-ops/: Cargo.toml
(+2209 files in other folders)
