[package]
name = "ffs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
asupersync = "0.3.1"
libfuzzer-sys = "0.4"

[dependencies.ffs-block]
path = "../crates/ffs-block"

[dependencies.ffs-error]
path = "../crates/ffs-error"

[dependencies.ffs-fuse]
path = "../crates/ffs-fuse"

[dependencies.ffs-ondisk]
path = "../crates/ffs-ondisk"

[dependencies.ffs-btrfs]
path = "../crates/ffs-btrfs"

[dependencies.ffs-core]
path = "../crates/ffs-core"

[dependencies.ffs-mvcc]
path = "../crates/ffs-mvcc"

[dependencies.ffs-journal]
path = "../crates/ffs-journal"

[dependencies.ffs-repair]
path = "../crates/ffs-repair"

[dependencies.ffs-types]
path = "../crates/ffs-types"

[workspace]
members = ["."]

[[bin]]
name = "fuzz_ext4_metadata"
path = "fuzz_targets/fuzz_ext4_metadata.rs"
doc = false

[[bin]]
name = "fuzz_btrfs_metadata"
path = "fuzz_targets/fuzz_btrfs_metadata.rs"
doc = false

[[bin]]
name = "fuzz_ext4_xattr"
path = "fuzz_targets/fuzz_ext4_xattr.rs"
doc = false

[[bin]]
name = "fuzz_ext4_dir_extent"
path = "fuzz_targets/fuzz_ext4_dir_extent.rs"
doc = false

[[bin]]
name = "fuzz_wal_replay"
path = "fuzz_targets/fuzz_wal_replay.rs"
doc = false

[[bin]]
name = "fuzz_mvcc_operations"
path = "fuzz_targets/fuzz_mvcc_operations.rs"
doc = false

[[bin]]
name = "fuzz_extent_tree"
path = "fuzz_targets/fuzz_extent_tree.rs"
doc = false

[[bin]]
name = "fuzz_btrfs_chunk_mapping"
path = "fuzz_targets/fuzz_btrfs_chunk_mapping.rs"
doc = false

[[bin]]
name = "fuzz_ext4_checksums"
path = "fuzz_targets/fuzz_ext4_checksums.rs"
doc = false

[[bin]]
name = "fuzz_ext4_htree_mmp"
path = "fuzz_targets/fuzz_ext4_htree_mmp.rs"
doc = false

[[bin]]
name = "fuzz_btrfs_devitem"
path = "fuzz_targets/fuzz_btrfs_devitem.rs"
doc = false

[[bin]]
name = "fuzz_btrfs_send_stream"
path = "fuzz_targets/fuzz_btrfs_send_stream.rs"
doc = false

[[bin]]
name = "fuzz_ext4_fast_commit"
path = "fuzz_targets/fuzz_ext4_fast_commit.rs"
doc = false

[[bin]]
name = "fuzz_repair_symbols"
path = "fuzz_targets/fuzz_repair_symbols.rs"
doc = false

[[bin]]
name = "fuzz_jbd2_replay"
path = "fuzz_targets/fuzz_jbd2_replay.rs"
doc = false

[[bin]]
name = "fuzz_btrfs_tree_log"
path = "fuzz_targets/fuzz_btrfs_tree_log.rs"
doc = false

[[bin]]
name = "fuzz_btrfs_tree_items"
path = "fuzz_targets/fuzz_btrfs_tree_items.rs"
doc = false

[[bin]]
name = "fuzz_openfs_recovery"
path = "fuzz_targets/fuzz_openfs_recovery.rs"
doc = false

[[bin]]
name = "fuzz_openfs_journal_replay"
path = "fuzz_targets/fuzz_openfs_journal_replay.rs"
doc = false

[[bin]]
name = "fuzz_ioctl_dispatch"
path = "fuzz_targets/fuzz_ioctl_dispatch.rs"
doc = false

[[bin]]
name = "fuzz_path_encoding_mount"
path = "fuzz_targets/fuzz_path_encoding_mount.rs"
doc = false
