[package]
name = "ffs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
anyhow = "1.0.102"
asupersync = "0.3.1"
crc32c = "0.6.8"
libfuzzer-sys = "0.4"

[dependencies.ffs-block]
path = "../crates/ffs-block"

[dependencies.ffs-btree]
path = "../crates/ffs-btree"

[dependencies.ffs-alloc]
path = "../crates/ffs-alloc"

[dependencies.ffs-error]
path = "../crates/ffs-error"

[dependencies.ffs-fuse]
path = "../crates/ffs-fuse"

[dependencies.ffs-inode]
path = "../crates/ffs-inode"

[dependencies.ffs-ondisk]
path = "../crates/ffs-ondisk"

[dependencies.ffs-btrfs]
path = "../crates/ffs-btrfs"

[dependencies.ffs-core]
path = "../crates/ffs-core"

[dependencies.ffs-dir]
path = "../crates/ffs-dir"

[dependencies.ffs-mvcc]
path = "../crates/ffs-mvcc"

[dependencies.ffs-journal]
path = "../crates/ffs-journal"

[dependencies.ffs-repair]
path = "../crates/ffs-repair"

[dependencies.ffs-xattr]
path = "../crates/ffs-xattr"

[dependencies.ffs-types]
path = "../crates/ffs-types"

[dependencies.ffs-extent]
path = "../crates/ffs-extent"

[workspace]
members = ["."]

[patch.crates-io]
fuser = { path = "../vendor/fuser" }

[[bin]]
name = "fuzz_ext4_metadata"
path = "fuzz_targets/fuzz_ext4_metadata.rs"
doc = false

[[bin]]
name = "fuzz_btrfs_metadata"
path = "fuzz_targets/fuzz_btrfs_metadata.rs"
doc = false

[[bin]]
name = "fuzz_btree_bw_tree"
path = "fuzz_targets/fuzz_btree_bw_tree.rs"
doc = false

[[bin]]
name = "fuzz_ext4_xattr"
path = "fuzz_targets/fuzz_ext4_xattr.rs"
doc = false

[[bin]]
name = "fuzz_ext4_dir_extent"
path = "fuzz_targets/fuzz_ext4_dir_extent.rs"
doc = false

[[bin]]
name = "fuzz_wal_replay"
path = "fuzz_targets/fuzz_wal_replay.rs"
doc = false

[[bin]]
name = "fuzz_mvcc_operations"
path = "fuzz_targets/fuzz_mvcc_operations.rs"
doc = false

[[bin]]
name = "fuzz_extent_tree"
path = "fuzz_targets/fuzz_extent_tree.rs"
doc = false

[[bin]]
name = "fuzz_btrfs_chunk_mapping"
path = "fuzz_targets/fuzz_btrfs_chunk_mapping.rs"
doc = false

[[bin]]
name = "fuzz_ext4_checksums"
path = "fuzz_targets/fuzz_ext4_checksums.rs"
doc = false

[[bin]]
name = "fuzz_ext4_htree_mmp"
path = "fuzz_targets/fuzz_ext4_htree_mmp.rs"
doc = false

[[bin]]
name = "fuzz_btrfs_devitem"
path = "fuzz_targets/fuzz_btrfs_devitem.rs"
doc = false

[[bin]]
name = "fuzz_btrfs_send_stream"
path = "fuzz_targets/fuzz_btrfs_send_stream.rs"
doc = false

[[bin]]
name = "fuzz_ext4_fast_commit"
path = "fuzz_targets/fuzz_ext4_fast_commit.rs"
doc = false

[[bin]]
name = "fuzz_repair_symbols"
path = "fuzz_targets/fuzz_repair_symbols.rs"
doc = false

[[bin]]
name = "fuzz_repair_codec_roundtrip"
path = "fuzz_targets/fuzz_repair_codec_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_native_cow_recovery"
path = "fuzz_targets/fuzz_native_cow_recovery.rs"
doc = false

[[bin]]
name = "fuzz_verify_ext4_integrity"
path = "fuzz_targets/fuzz_verify_ext4_integrity.rs"
doc = false

[[bin]]
name = "fuzz_detect_filesystem"
path = "fuzz_targets/fuzz_detect_filesystem.rs"
doc = false

[[bin]]
name = "fuzz_btrfs_inode_ref_payload"
path = "fuzz_targets/fuzz_btrfs_inode_ref_payload.rs"
doc = false

[[bin]]
name = "fuzz_lrc_repair"
path = "fuzz_targets/fuzz_lrc_repair.rs"
doc = false

[[bin]]
name = "fuzz_jbd2_replay"
path = "fuzz_targets/fuzz_jbd2_replay.rs"
doc = false

[[bin]]
name = "fuzz_btrfs_tree_log"
path = "fuzz_targets/fuzz_btrfs_tree_log.rs"
doc = false

[[bin]]
name = "fuzz_xattr_parsing"
path = "fuzz_targets/fuzz_xattr_parsing.rs"
doc = false

[[bin]]
name = "fuzz_btrfs_tree_items"
path = "fuzz_targets/fuzz_btrfs_tree_items.rs"
doc = false

[[bin]]
name = "fuzz_openfs_recovery"
path = "fuzz_targets/fuzz_openfs_recovery.rs"
doc = false

[[bin]]
name = "fuzz_openfs_journal_replay"
path = "fuzz_targets/fuzz_openfs_journal_replay.rs"
doc = false

[[bin]]
name = "fuzz_openfs_mvcc_wal_recovery"
path = "fuzz_targets/fuzz_openfs_mvcc_wal_recovery.rs"
doc = false

[[bin]]
name = "fuzz_path_component_validation"
path = "fuzz_targets/fuzz_path_component_validation.rs"
doc = false

[[bin]]
name = "fuzz_ioctl_dispatch"
path = "fuzz_targets/fuzz_ioctl_dispatch.rs"
doc = false

[[bin]]
name = "fuzz_path_encoding_mount"
path = "fuzz_targets/fuzz_path_encoding_mount.rs"
doc = false

[[bin]]
name = "fuzz_fuse_splice_mount"
path = "fuzz_targets/fuzz_fuse_splice_mount.rs"
doc = false

[[bin]]
name = "fuzz_repair_evidence_ledger"
path = "fuzz_targets/fuzz_repair_evidence_ledger.rs"
doc = false

[[bin]]
name = "fuzz_ext4_image_reader"
path = "fuzz_targets/fuzz_ext4_image_reader.rs"
doc = false

[[bin]]
name = "fuzz_inode_roundtrip"
path = "fuzz_targets/fuzz_inode_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_alloc_bitmap"
path = "fuzz_targets/fuzz_alloc_bitmap.rs"
doc = false

[[bin]]
name = "fuzz_alloc_succinct"
path = "fuzz_targets/fuzz_alloc_succinct.rs"
doc = false

[[bin]]
name = "fuzz_dir_operations"
path = "fuzz_targets/fuzz_dir_operations.rs"
doc = false

[[bin]]
name = "fuzz_por_authenticator"
path = "fuzz_targets/fuzz_por_authenticator.rs"
doc = false

[[bin]]
name = "fuzz_cli_btrfs_parsers"
path = "fuzz_targets/fuzz_cli_btrfs_parsers.rs"
doc = false

[[bin]]
name = "fuzz_extent_cache_concurrent"
path = "fuzz_targets/fuzz_extent_cache_concurrent.rs"
doc = false
