[package]
name = "ffs-alloc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ffs-types = { workspace = true }
ffs-error = { workspace = true }
ffs-block = { workspace = true }
ffs-ondisk = { workspace = true }
asupersync = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bitmap_ops"
harness = false

[lints]
workspace = true
