[package]
name = "ffs-alloc"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ffs-types = { workspace = true }
ffs-error = { workspace = true }
ffs-block = { workspace = true }
ffs-ondisk = { workspace = true }
asupersync = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "bitmap_ops"
harness = false

[[bench]]
name = "batch_alloc"
harness = false

[[bench]]
name = "group_order"
harness = false

[[bench]]
name = "inode_alloc_cursor"
harness = false

[lints]
workspace = true

[[bench]]
name = "bitmap_scan_width"
harness = false

[[bench]]
name = "bitmap_count_width"
harness = false

[[bench]]
name = "bitmap_run_width"
harness = false

[[bench]]
name = "contiguous_scan_width"
harness = false

[[bench]]
name = "take_bits_scan_width"
harness = false
