[package]
name = "ffs-block"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
s3fifo = []

[dependencies]
ffs-types = { workspace = true }
ffs-error = { workspace = true }
asupersync = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
blake3 = { workspace = true }

[[bench]]
name = "arc_cache"
harness = false

[lints]
workspace = true
