[package]
name = "ffs-btree"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ffs-types = { workspace = true }
ffs-error = { workspace = true }
ffs-block = { workspace = true }
ffs-ondisk = { workspace = true }
asupersync = { workspace = true }
tracing = { workspace = true }
crossbeam-epoch = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "bwtree_vs_locked"
harness = false

[lints]
workspace = true
