[package]
name = "ffs-btrfs"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
asupersync = { workspace = true }
ffs-mvcc = { workspace = true }
ffs-ondisk = { workspace = true }
ffs-types = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
ffs-block = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "extent_fetch"
harness = false

[lints]
workspace = true
