[package]
name = "ffs-btrfs"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
asupersync = { workspace = true }
ffs-mvcc = { workspace = true }
ffs-ondisk = { workspace = true }
ffs-types = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
ffs-block = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "extent_fetch"
harness = false

[[bench]]
name = "readdir_dedup"
harness = false

[[bench]]
name = "ondisk_floor"
harness = false

[[bench]]
name = "ondisk_inode_attr"
harness = false

[[bench]]
name = "parsed_node_cache"
harness = false

[[bench]]
name = "csum_lookup"
harness = false

[[bench]]
name = "floor_node_scan"
harness = false

[[bench]]
name = "leaf_range_filter"
harness = false

[[bench]]
name = "chunk_dedup"
harness = false

[lints]
workspace = true
