[package]
name = "ffs-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
asupersync = { workspace = true }
clap = { workspace = true }
ffs-block = { workspace = true }
ffs-core = { workspace = true }
ffs-fuse = { workspace = true }
ffs-harness = { workspace = true }
ffs-repair = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
