[package]
name = "ffs-cli"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
asupersync = { workspace = true }
clap = { workspace = true }
crc32c = { workspace = true }
ctrlc = { workspace = true }
ffs-error = { workspace = true }
ffs-block = { workspace = true }
ffs-btrfs = { workspace = true }
ffs-core = { workspace = true }
ffs-fuse = { workspace = true }
ffs-mvcc = { workspace = true }
ffs-harness = { workspace = true }
ffs-ondisk = { workspace = true }
ffs-repair = { workspace = true }
ffs-types = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
