[package]
name = "ffs-cli"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tikv-jemallocator = "0.7"
anyhow = { workspace = true }
asupersync = { workspace = true }
clap = { workspace = true }
crc32c = { workspace = true }
ctrlc = { workspace = true }
rayon = { workspace = true }
ffs-error = { workspace = true }
ffs-block = { workspace = true }
ffs-btrfs = { workspace = true }
ffs-core = { workspace = true }
ffs-fuse = { workspace = true }
ffs-mvcc = { workspace = true }
ffs-harness = { workspace = true }
ffs-ondisk = { workspace = true }
ffs-repair = { workspace = true }
ffs-types = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

[features]
# bd-bhh0i: build the sharded (lock-free) parallel-create path into ffs-core so the
# create-bench can toggle it on (FFS_BHH0I_SHARDED=1) for the local A/B + e2fsck gate.
bhh0i_sharded_alloc = ["ffs-core/bhh0i_sharded_alloc"]

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
