[package]
name = "ffs-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
asupersync = { workspace = true }
ffs-alloc = { workspace = true }
ffs-block = { workspace = true }
ffs-btree = { workspace = true }
ffs-btrfs = { workspace = true }
ffs-dir = { workspace = true }
ffs-error = { workspace = true }
ffs-extent = { workspace = true }
ffs-inode = { workspace = true }
ffs-journal = { workspace = true }
ffs-mvcc = { workspace = true }
ffs-ondisk = { workspace = true }
ffs-types = { workspace = true }
ffs-xattr = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
libc = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
