[package]
name = "ffs-core"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
asupersync = { workspace = true }
ffs-alloc = { workspace = true }
ffs-block = { workspace = true }
ffs-btree = { workspace = true }
ffs-btrfs = { workspace = true }
ffs-dir = { workspace = true }
ffs-error = { workspace = true }
ffs-extent = { workspace = true }
ffs-inode = { workspace = true }
ffs-journal = { workspace = true }
ffs-mvcc = { workspace = true }
ffs-ondisk = { workspace = true }
ffs-types = { workspace = true }
ffs-xattr = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
flate2 = { workspace = true }
lzokay-native = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
libc = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

[[bench]]
name = "extent_resolve"
harness = false

[[bench]]
name = "chunk_end_resolve"
harness = false

[[bench]]
name = "extent_leaf_cache"
harness = false

[[bench]]
name = "indirect_ptr_resolve"
harness = false

[[bench]]
name = "group_desc_read"
harness = false

[[bench]]
name = "extent_collect_window"
harness = false

[[bench]]
name = "readdir_snapshot_page"
harness = false

[[bench]]
name = "ext4_write_extent_cache"
harness = false

[[bench]]
name = "ext4_write_resolve"
harness = false

[[bench]]
name = "ext4_write_unwritten_cache"
harness = false

[[bench]]
name = "htree_resolve_logical"
harness = false

[[bench]]
name = "readdir_dedup_clone"
harness = false

[[bench]]
name = "statfs_group_aggregate"
harness = false

[[bench]]
name = "btrfs_encoded_read_covering_extent"
harness = false

[[bench]]
name = "btrfs_decompress_extents"
harness = false

[lints]
workspace = true

[[bench]]
name = "btrfs_alloc_rwlock"
harness = false

[[bench]]
name = "cache_get_rwlock"
harness = false

[[bench]]
name = "parsed_node_cache_shard"
harness = false
