[package]
name = "ffs-core"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustc-hash = "2"
arc-swap = { workspace = true }
asupersync = { workspace = true }
ffs-alloc = { workspace = true }
ffs-block = { workspace = true }
ffs-btree = { workspace = true }
ffs-btrfs = { workspace = true }
ffs-dir = { workspace = true }
ffs-error = { workspace = true }
ffs-extent = { workspace = true }
ffs-inode = { workspace = true }
ffs-journal = { workspace = true }
ffs-mvcc = { workspace = true }
ffs-ondisk = { workspace = true }
ffs-types = { workspace = true }
ffs-xattr = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
flate2 = { workspace = true }
lzokay-native = { workspace = true }
zstd = { workspace = true }
lzo = "0.1"

[dev-dependencies]
criterion = { workspace = true }
libc = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

[[bench]]
name = "extent_resolve"
harness = false

[[bench]]
name = "chunk_end_resolve"
harness = false

[[bench]]
name = "extent_leaf_cache"
harness = false

[[bench]]
name = "indirect_ptr_resolve"
harness = false

[[bench]]
name = "group_desc_read"
harness = false

[[bench]]
name = "extent_collect_window"
harness = false

[[bench]]
name = "readdir_snapshot_page"
harness = false

[[bench]]
name = "ext4_write_extent_cache"
harness = false

[[bench]]
name = "ext4_write_resolve"
harness = false

[[bench]]
name = "ext4_write_unwritten_cache"
harness = false

[[bench]]
name = "htree_resolve_logical"
harness = false

[[bench]]
name = "readdir_dedup_clone"
harness = false

[[bench]]
name = "statfs_group_aggregate"
harness = false

[[bench]]
name = "btrfs_encoded_read_covering_extent"
harness = false

[[bench]]
name = "btrfs_decompress_extents"
harness = false

[[bench]]
name = "btrfs_read_io_overlap"
harness = false

[[bench]]
name = "btrfs_uncompressed_read_overlap"
harness = false

[[bench]]
name = "ext4_fragmented_read_overlap"
harness = false

[[bench]]
name = "ext4_readdir_run_overlap"
harness = false

[[bench]]
name = "ext4_lookup_run_overlap"
harness = false

[lints]
workspace = true

[[bench]]
name = "btrfs_alloc_rwlock"
harness = false

[[bench]]
name = "cache_get_rwlock"
harness = false

[[bench]]
name = "parsed_node_cache_shard"
harness = false

[[bench]]
name = "ext4_file_data_cache_shard"
harness = false

[[bench]]
name = "ext4_metadata_parse_xattr_ibody"
harness = false

[[bench]]
name = "mvcc_read_visible_arc_share_realistic"
harness = false

[[bench]]
name = "ls_dir_inode_prefetch"
harness = false

[[bench]]
name = "mvcc_commit_batching"
harness = false

[[bench]]
name = "ext4_alloc_lock_convoy"
harness = false

[[bench]]
name = "ext4_group_lock_layout"
harness = false

[[bench]]
name = "bd_bhh0i_contention"
harness = false

[[bench]]
name = "fsync_latency_workload"
harness = false

[[bench]]
name = "ext4_indirect_read_overlap"
harness = false

[[bench]]
name = "ext4_extent_tree_walk_overlap"
harness = false

[[bench]]
name = "e2compr_cluster_read_overlap"
harness = false

[[bench]]
name = "sparse_zero_scan"
harness = false
