[package]
name = "ffs-dir"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ffs-error = { workspace = true }
ffs-ondisk = { workspace = true }

[dev-dependencies]
libc = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
