[package]
name = "ffs-dir"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ffs-error = { workspace = true }
ffs-ondisk = { workspace = true }

[dev-dependencies]
libc = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "dirent_dup_scan"
harness = false

[lints]
workspace = true

[[bench]]
name = "entry_header_write"
harness = false

[[bench]]
name = "entry_header_read"
harness = false
