[package]
name = "ffs-ext4"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ffs-ondisk = { workspace = true }

[dev-dependencies]
asupersync = { workspace = true }
ffs-alloc = { workspace = true }
ffs-block = { workspace = true }
ffs-error = { workspace = true }
ffs-types = { workspace = true }

[lints]
workspace = true
