[package]
name = "ffs-extent"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ffs-types = { workspace = true }
ffs-error = { workspace = true }
ffs-block = { workspace = true }
ffs-btree = { workspace = true }
ffs-alloc = { workspace = true }
ffs-ondisk = { workspace = true }
asupersync = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "extent_resolve"
harness = false

[[bench]]
name = "extent_cache_same_ns"
harness = false

[[bench]]
name = "extent_cache_real_contention"
harness = false

[[bench]]
name = "extent_cache_touch_cost"
harness = false

[lints]
workspace = true
