[package]
name = "ffs-fuse"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
asupersync = { workspace = true }
ffs-core = { workspace = true }
ffs-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
