[package]
name = "ffs-fuse"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
asupersync = { workspace = true }
ffs-core = { workspace = true }
ffs-error = { workspace = true }
ffs-types = { workspace = true }
fuser = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
serde_json.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }

[[bench]]
name = "mount_runtime"
harness = false

[[bench]]
name = "degraded_pressure"
harness = false

[lints]
workspace = true
