[package]
name = "ffs-harness"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
ffs-core = { workspace = true }
ffs-ondisk = { workspace = true }
ffs-types = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
asupersync = { workspace = true }
blake3 = { workspace = true }
criterion = { workspace = true }
ffs-alloc = { workspace = true }
ffs-block = { workspace = true }
ffs-btrfs = { workspace = true }
ffs-error = { workspace = true }
ffs-fuse = { workspace = true }
ffs-inode = { workspace = true }
ffs-xattr = { workspace = true }
flate2 = { workspace = true }
fuser = { workspace = true }
insta = { workspace = true }
libc = { workspace = true }
lzokay-native = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber.workspace = true
zstd = { workspace = true }

[[bench]]
name = "metadata_parse"
harness = false

[[bench]]
name = "ondisk_parse"
harness = false

[[bin]]
name = "ffs-harness"
path = "src/main.rs"

[lints]
workspace = true
