[package]
name = "ffs-harness"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
asupersync = { workspace = true }
# `stale_mounts::install_teardown_hooks` installs a SIGINT/SIGTERM handler that
# reclaims leaked FUSE mounts on abrupt exit; the `termination` feature makes it
# also fire on SIGTERM (the signal a test runner's timeout-kill sends).
ctrlc = { workspace = true, features = ["termination"] }
ffs-btrfs = { workspace = true }
ffs-core = { workspace = true }
ffs-fuse = { workspace = true }
ffs-ondisk = { workspace = true }
ffs-types = { workspace = true }
# `fuser` is a runtime dependency because `stale_mounts::MountGuard` (in the
# library) owns a `fuser::BackgroundSession`. The e2e/conformance tests use it
# directly too, so it stays available to them transitively.
fuser = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
blake3 = { workspace = true }
crc32c = { workspace = true }
criterion = { workspace = true }
ffs-alloc = { workspace = true }
ffs-block = { workspace = true }
ffs-error = { workspace = true }
ffs-inode = { workspace = true }
ffs-xattr = { workspace = true }
flate2 = { workspace = true }
insta = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
lzokay-native = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber.workspace = true
trybuild = { workspace = true }
zstd = { workspace = true }

[[bench]]
name = "metadata_parse"
harness = false

[[bench]]
name = "ondisk_parse"
harness = false

[[bin]]
name = "ffs-harness"
path = "src/main.rs"

[lints]
workspace = true
