[package]
name = "ffs-inode"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ffs-types = { workspace = true }
ffs-error = { workspace = true }
ffs-block = { workspace = true }
ffs-ondisk = { workspace = true }
ffs-alloc = { workspace = true }
ffs-extent = { workspace = true }
asupersync = { workspace = true }
crc32c = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "inode_free_runs"
harness = false

[[bench]]
name = "serialize_inode"
harness = false

[lints]
workspace = true

[[bench]]
name = "crc_incremental"
harness = false

[[bench]]
name = "indirect_zero_scan"
harness = false

[[bench]]
name = "locate_inode"
harness = false
